<resources>
    <string name="app_name">DAAndroidCourse2021</string>
    <string name="main_btAddDescription">Добавить привычку</string>
    <string name="main_twEmptyHabitsText">Привычек нет</string>
    <string name="editHabit_name">Название</string>
    <string name="editHabit_description">Описание</string>
    <string name="editHabit_priority">Приоритет</string>
    <string name="editHabit_type">Тип</string>
    <string name="editHabit_typeGood">Хорошая</string>
    <string name="editHabit_typeBad">Плохая</string>
    <string name="editHabit_frequency">Периодичность</string>
    <string name="editHabit_save">Сохранить</string>
    <string name="editHabit_frequencyHint">раз, каждые</string>
    <string name="editHabit_frequencyRandeDaysHint">дней</string>
    <string name="menuMain_habits">Привычки</string>
    <string name="menuMain_info">О приложении</string>
    <string name="fragmentInfo_text">Информация</string>
    <string name="drawer_open">Открыть</string>
    <string name="drawer_close">Закрыть</string>
    <string-array name="editHabit_priority">
        <item>Низкий</item>
        <item>Средний</item>
        <item>Высокий</item>
    </string-array>
    <string-array name="editHabit_type">
        <item>Хорошая</item>
        <item>Плохая</item>
    </string-array>
</resources>
